--- a/site/css/extra.css
+++ b/site/css/extra.css
@@ -58,6 +58,9 @@ footer .col > a {
     background-color: #fff;
     color: #00052f;
 }
+#sidebar-nav a {
+    color: #00052f;
+}
 /***************************************************
 * Sidebar Sub
 ***************************************************/
