--- a/mkdocs_moonstone/css/extra.css
+++ b/mkdocs_moonstone/css/extra.css
@@ -52,6 +52,9 @@ pre code {
     color: #e83e8c;
     word-break: break-word;
 }
+button:focus {
+    outline:none;
+}
 /***************************************************
 * Header
 ***************************************************/
@@ -89,6 +92,10 @@ pre code {
     }
     #mainnav .navbar-toggler .navbar-toggler-icon i {
         line-height: 30px;
+    }
+    #mainnav #mainnav-navbar-collapse > .navbar-nav {
+        background: none;
+        padding: 0;
     }
 }
 /***************************************************
@@ -190,6 +197,30 @@ footer .col > a {
         left: 25px;
         z-index: 999;
         border: 0;
+        background: #fff;
+    }
+    #sidebar-nav .navbar-toggler .navbar-toggler-icon i {
+        line-height: 30px;
+    }
+    #sidebar-navbar-collapse.show {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100%;
+        padding: 0;
+        z-index: 997;
+        background: rgba(0, 5, 47, .5);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        -ms-align-items: center;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 }
 /***************************************************
